# Tremurex

./: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/drift-gate/: action.yml
.github/workflows/: ci.yml
apps/cli/: package.json  tsconfig.json
apps/cli/src/: check.test.ts  check.ts  cli.ts  client.ts  runner.test.ts  (+1 more)
apps/core/: Dockerfile  drizzle.config.ts  package.json  vitest.config.ts
apps/web/: Dockerfile  index.html  package.json  tsconfig.json
docs/: demo.tape
scripts/: demo.sh
services/proxy/: Dockerfile  addon.py  pyproject.toml
services/proxy/proxy_addon/: __init__.py  capture.py  forwarder.py
services/proxy/tests/: test_capture.py  test_forwarder.py
services/schema-engine/: Dockerfile  pyproject.toml
services/schema-engine/app/: inference.py  main.py
services/schema-engine/tests/: test_health.py  test_infer.py
services/schema-engine/tests/fixtures/infer/: array-of-objects-varying.json  conditional-field.json  empty-object.json  enum-like-values.json  heterogeneous-array.json  identical-samples.json  mixed-scalar-types.json  nested-objects.json  nullable-field.json  object-vs-scalar.json  single-sample.json
tests/e2e/: package.json  vitest.config.ts
tests/mock-api/: Dockerfile  package.json
(+71 files in other folders)
